$Id: whatsnew.txt,v 1.5 2013/10/06 19:44:49 ajleary Exp $

Support:
========

  Web:      http://makenl.sourceforge.net/
  Fidonet:  The echomail area MAKENL_NG, available to most systems
  Trackers: Besides discussions in the echo, Bugs and Feature Requests
            can be registered and tracked at:
            http://sourceforge.net/p/makenl/bugs/
            http://sourceforge.net/p/makenl/feature-requests/


Important Changes since MakeNL 2.5x:
====================================

FILENAMES:
----------
  If you use a case sensitive OS (Unix, Linux etc), then change
  all output filenames to lowercase. MakeNL writes the filenames
  to disk in lowercase on these OS's. On other OS's this doesn't
  matter.

NETADDRESS:
-----------
  To allow better zone aware netmails, the netaddress must now 
  include the zone number, 28/0 should now become 2:28/0

ARC:
----
  The ARC keyword no longer works as documented in the old MakeNL
  documentation and is obsolete. MakeNL 2.5x only had support for
  Arc compression, but 3.1.8 now supports multiple compression
  utilities, through configurable archiver entries following the
  ARCOpen and ARCMove keywords. These new keywords need between
  three and five parameters. To provide compatibility with MakeNL
  2.5x, the ARC keyword must be commented out of the MAKENL.CTL
  file, which will cause MakeNL to default to Arc compression as
  before.
  
  Currently, ARCCopy and ARCMove work for this feature. The difference
  is that ARCCopy creates an archive but leaves the original file,
  ARCMove creates and archive and removes the original file.
  Since version 3.2.1 MakeNL can now send hub and host networks segments
  compressed to. Add the following lines to makenl.ctl to use it:

    threshold   0 -1
    arccopy     z zip -jo      ; Infozip
    arcmove     z zip -jmo

  If you use the arccopy keyword you must also use the arcmove keyword
  so that both the nodelist and nodediff will use the same archiver