@@ -1,7 +1,14 @@
-/*  $Id: history.txt,v 1.35 2015/01/02 05:48:13 jame Exp $  */
+/*  $Id: history.txt,v 1.36 2016/10/29 06:58:12 ajleary Exp $  */
 
 
                             MakeNL Revision History
+
+       v3.4.6 -- October 29, 2016
+
+	    Add the RemoveBOM option requested by Michiel van der Vlist.
+	    When enabled (RemoveBOM 1 in makenl.ctl), UTF-8 Byte Order Marks
+	    will be stripped from incoming segments.
+	    -- Andrew Leary
 
        -- January 1, 2015
 
